<resources>
    <string name="app_name">MyAcademyProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description_top">top</string>
    <string name="label_back">Back</string>
    <string name="required_age_above_13">13+</string>
    <string name="title">Avengers:End Game</string>
    <string name="category">Action, Adventure, Fantasy</string>
    <string name="reviews">125 reviews</string>
    <string name="title_storyline">Storyline</string>
    <string name="storyline_content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="title_cast">Cast</string>
    <string name="downey">Robert Downey Jr.</string>
    <string name="evans">Chris Evans</string>
    <string name="ruffalo">Mark Ruffalo</string>
    <string name="hemsworth">Chris Hemsworth</string>
    <string name="description_back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="duration">137 min</string>
    <string name="image">image</string>
    <string name="like">like</string>
    <string name="mask">mask</string>
    <string name="some_minutes">%1$d min</string>
    <string name="some_reviews">%1$d reviews</string>
    <string name="movie_error">There was an error retrieving movie data</string>
</resources>