<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_card"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_title">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_top"
        android:src="@drawable/poster_avengers"
        app:layout_constraintBottom_toTopOf="@id/tv_movie_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/top_mask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_background"
        android:contentDescription="@string/mask"
        app:layout_constraintBottom_toBottomOf="@id/iv_poster"
        app:layout_constraintEnd_toEndOf="@id/iv_poster"
        app:layout_constraintStart_toStartOf="@id/iv_poster"
        app:layout_constraintTop_toTopOf="@id/iv_poster" />

    <ImageView
        android:id="@+id/iv_like"
        android:layout_width="@dimen/like_size"
        android:layout_height="@dimen/like_size"
        android:layout_margin="@dimen/card_margin"
        android:contentDescription="@string/like"
        android:padding="@dimen/text_padding"
        android:src="@drawable/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_required_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:layout_marginBottom="@dimen/midi_margin"
        android:background="@drawable/background_age_required"
        android:padding="@dimen/text_padding"
        android:text="@string/required_age_above_13"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:layout_marginStart="@dimen/card_margin"
        android:text="@string/title"
        android:textColor="@color/text_general"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

    <RatingBar
        android:id="@+id/ratings"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:numStars="5"
        android:rating="4.0"
        android:stepSize="1.0"
        android:theme="@style/RatingBar"
        app:layout_constraintBottom_toBottomOf="@id/iv_poster"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:layout_marginStart="@dimen/card_margin"
        android:text="@string/reviews"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ratings"
        app:layout_constraintStart_toEndOf="@id/ratings"
        app:layout_constraintTop_toTopOf="@id/ratings" />

    <TextView
        android:id="@+id/tv_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:fontFamily="@string/font_family_light"
        android:text="@string/category"
        android:textColor="@color/category"
        app:layout_constraintBottom_toTopOf="@id/ratings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:layout_marginStart="@dimen/card_margin"
        android:text="@string/duration"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />
</androidx.constraintlayout.widget.ConstraintLayout>