<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:scrollbars="vertical"
        tools:context=".MovieDetailsActivity">

        <ImageView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_top"
            android:scaleType="fitXY"
            android:src="@drawable/top_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/top_mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            app:layout_constraintBottom_toBottomOf="@id/top"
            app:layout_constraintEnd_toEndOf="@id/top"
            app:layout_constraintStart_toStartOf="@id/top"
            app:layout_constraintTop_toTopOf="@id/top" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/lb_back"
            app:layout_constraintEnd_toStartOf="@+id/lb_back"
            app:layout_constraintTop_toTopOf="@+id/lb_back" />

        <TextView
            android:id="@+id/lb_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/middle_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/label_back"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/required_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:text="@string/required_age_above_13"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/movie_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:text="@string/title"
            android:textSize="@dimen/text_big"
            android:textStyle="bold"
            android:textColor="@color/text_general"
            app:layout_constraintBottom_toBottomOf="@+id/top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top" />

        <TextView
            android:id="@+id/categoties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/category"
            android:textColor="@color/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />

        <include
            android:id="@+id/ratings"
            layout="@layout/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:layout_marginBottom="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoties" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/reviews"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ratings"
            app:layout_constraintStart_toEndOf="@id/ratings"
            app:layout_constraintTop_toTopOf="@id/ratings" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:text="@string/title_storyline"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratings" />

        <TextView
            android:id="@+id/storyline_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/storyline_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline_title" />

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin"
            android:text="@string/title_cast"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/storyline_content" />

        <include
            layout="@layout/people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:layout_marginBottom="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>