<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:scrollbars="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/general_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/general_margin" />

        <ImageView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_top"
            android:scaleType="fitXY"
            android:src="@drawable/top_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/top_mask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            app:layout_constraintBottom_toBottomOf="@id/top"
            app:layout_constraintEnd_toEndOf="@id/top"
            app:layout_constraintStart_toStartOf="@id/top"
            app:layout_constraintTop_toTopOf="@id/top" />

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/description_back"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/lb_back"
            app:layout_constraintEnd_toStartOf="@+id/lb_back"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toTopOf="@+id/lb_back" />

        <TextView
            android:id="@+id/lb_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/label_back"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/required_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/midi_margin"
            android:text="@string/required_age_above_13"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/movie_title"
            app:layout_constraintStart_toEndOf="@id/start" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/text_general"
            android:textSize="@dimen/text_big"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/top"
            app:layout_constraintEnd_toStartOf="@id/end"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@+id/top" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:fontFamily="@string/font_family_light"
            android:text="@string/category"
            android:textColor="@color/category"
            app:layout_constraintEnd_toStartOf="@id/end"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />

        <RatingBar
            android:id="@+id/ratings"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:numStars="5"
            android:rating="4.0"
            android:stepSize="1.0"
            android:theme="@style/RatingBar"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@+id/categories" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/general_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/reviews"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ratings"
            app:layout_constraintStart_toEndOf="@id/ratings"
            app:layout_constraintTop_toTopOf="@id/ratings" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_marginBottom="@dimen/general_margin"
            android:text="@string/title_storyline"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/ratings" />

        <TextView
            android:id="@+id/storyline_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:fontFamily="@string/font_family_light"
            android:text="@string/storyline_content"
            app:layout_constraintEnd_toStartOf="@id/end"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/storyline_title" />

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_margin"
            android:layout_marginBottom="@dimen/general_margin"
            android:text="@string/title_cast"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/storyline_content" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/downey"
            android:src="@drawable/downey"
            app:layout_constraintBottom_toTopOf="@id/downey_name"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintTop_toBottomOf="@id/cast_title" />

        <TextView
            android:id="@+id/downey_name"
            style="@style/PeopleInfoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/downey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/evans"
            android:src="@drawable/evans"
            app:layout_constraintBottom_toTopOf="@id/evans_name"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@id/cast_title" />

        <TextView
            android:id="@+id/evans_name"
            style="@style/PeopleInfoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/evans"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageView2"
            app:layout_constraintStart_toStartOf="@id/imageView2"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ruffalo"
            android:src="@drawable/ruffalo"
            app:layout_constraintBottom_toTopOf="@id/ruffalo_name"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@id/cast_title" />

        <TextView
            android:id="@+id/ruffalo_name"
            style="@style/PeopleInfoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ruffalo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageView3"
            app:layout_constraintStart_toStartOf="@id/imageView3"
            app:layout_constraintTop_toBottomOf="@id/imageView3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginEnd="@dimen/general_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hemsworth"
            android:src="@drawable/hemsworth"
            app:layout_constraintBottom_toTopOf="@id/hemsworth_name"
            app:layout_constraintEnd_toStartOf="@id/end"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@id/cast_title" />

        <TextView
            android:id="@+id/hemsworth_name"
            style="@style/PeopleInfoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hemsworth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageView4"
            app:layout_constraintStart_toStartOf="@id/imageView4"
            app:layout_constraintTop_toBottomOf="@id/imageView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>