<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".FragmentMoviesList">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/midi_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_combined_shape"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:padding="@dimen/text_padding"
            android:text="@string/movies_list"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/card"
            app:layout_constraintStart_toEndOf="@id/img"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/midi_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:background="@drawable/background_card"
            android:padding="1dp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_top"
                android:src="@drawable/background_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_movie_title"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/top_mask"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient_background"
                android:contentDescription="@string/mask"
                app:layout_constraintTop_toTopOf="@id/iv_poster"
                app:layout_constraintBottom_toBottomOf="@id/iv_poster"
                app:layout_constraintEnd_toEndOf="@id/iv_poster"
                app:layout_constraintStart_toStartOf="@id/iv_poster" />

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="@dimen/like_size"
                android:layout_height="@dimen/like_size"
                android:layout_margin="@dimen/card_margin"
                android:contentDescription="@string/like"
                android:padding="@dimen/text_padding"
                android:src="@drawable/like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_required_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:layout_marginBottom="@dimen/midi_margin"
                android:background="@drawable/background_age_required"
                android:padding="@dimen/text_padding"
                android:text="@string/required_age_above_13"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:layout_marginStart="@dimen/card_margin"
                android:text="@string/title"
                android:textColor="@color/text_general"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

            <RatingBar
                android:id="@+id/ratings"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:numStars="5"
                android:rating="4.0"
                android:stepSize="1.0"
                android:theme="@style/RatingBar"
                app:layout_constraintBottom_toBottomOf="@id/iv_poster"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:fontFamily="@string/font_family_light"
                android:text="@string/category"
                android:textColor="@color/category"
                app:layout_constraintBottom_toTopOf="@id/ratings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:layout_marginStart="@dimen/card_margin"
                android:text="@string/duration"
                android:textAllCaps="true"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>